# mediaplayer-app

./: .bzrignore  CMakeLists.txt  config.h.in  main.cpp  mediaplayer-app.wrapper  mediaplayer.cpp  mediaplayer.h  mediaplayer.qmlproject  run_on_device  snapcraft.yaml
Besançon/: Besançon.pro  main.cpp
cmake/: autopilot.cmake
data/: CMakeLists.txt  media-player.desktop  mediaplayer-app-content.json  mediaplayer-app.desktop  mediaplayer-app.desktop.in  mediaplayer-app.desktop.in.in  mediaplayer-app.url-dispatcher
debian/: changelog  control  copyright  media-player-autopilot.install  media-player.install  mediaplayer-app-autopilot.install  mediaplayer-app.install  rules
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  id.po  is.po  it.po  ja.po  km.po  ko.po  (+34 more)
qml/: player.qml
qml/common/: AbstractButton.qml  AbstractExpandingDropDown.qml  AbstractScrollbar.qml  GlowButton.qml  TextCustom.qml  TextMultiLine.qml  VideoInfo.qml  VideoPlayerIndicatorsBar.qml  fontUtils.js  units.js  utils.js
qml/common/artwork/: media_player_bar.sci
qml/common/visibilityBehaviors/: AlwaysVisibleBehavior.qml  BaseBehavior.qml  ImmediateHideBehavior.qml  TimeoutBehavior.qml
qml/indicators/: CurrentTimeIndicator.qml  Indicator.qml  PlayerIndicators.qml  PlayerVolumeIndicator.qml  VolumeIndicator.qml
qml/indicators/artwork/: indicator_glow.sci  volume_bar.sci  volume_filler.sci
qml/player/: AbstractPlayer.qml  Controls.qml  SceneCoverFlow.qml  VideoPlayer.qml  VideoPlayerIndicatorsBar.qml  VideoSidebar.qml
qml/player/artwork/: scene_position_rounded.sci  timeline_watched.sci
qml/sidebar/: ExpandingDropDown.qml  Sidebar.qml  SidebarComponent.qml  SidebarScrollingComponent.qml  SidebarView.qml
qml/sidebar/artwork/: scroll_bar.sci  scroll_glow.sci
sdk/: CMakeLists.txt  sharefile.cpp  sharefile.h
setup/gui/: mediaplayer-app.desktop
snap/: mediaplayer-app.wrapper
src/: CMakeLists.txt  main.cpp  mediaplayer.cpp  mediaplayer.h  thumbnail-pipeline-gst.cpp  thumbnail-pipeline-gst.h  thumbnail-pipeline.cpp  thumbnail-pipeline.h  thumbnail-provider.cpp  thumbnail-provider.h  thumbnail-surface.cpp  thumbnail-surface.h
src/qml/: CMakeLists.txt  VideoImport.qml  VideoImportDialog.qml  player.qml
src/qml/common/: GlowButton.qml  VideoInfo.qml  VisibilityController.qml
src/qml/common/artwork/: button_glow.sci
src/qml/common/visibilityBehaviors/: AlwaysVisibleBehavior.qml  AutoHideBehavior.qml
src/qml/player/: AbstractPlayer.qml  Controls.qml  ControlsMask.qml  HLine.qml  IconButton.qml  PlaybackButton.qml  SceneCoverFlow.qml  SceneFrame.qml  SceneSelector.qml  TimeLabel.qml  TimeLine.qml  ToolBar.qml  VLine.qml  VideoPlayer.qml  VideoSlider.qml
src/qml/player/artwork/: bubble.sci  timeline_loaded.sci
src/qml/sdk/: DraggingArea.qml  GenericToolbar.qml  ShareMenu.qml  SharePopover.qml  Slider.qml  UbuntuApplicationWrapper.qml  mathUtils.js
src/qml/theme/: VideoSlider.qml  qmldir  theme.qmltheme
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt
tests/autopilot/mediaplayer_app/: __init__.py
tests/autopilot/mediaplayer_app/emulators/: main_window.py
tests/autopilot/mediaplayer_app/tests/: __init__.py  test_player.py  test_player_with_video.py
tests/images/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  test-config.h.in  thumbnailtest.cpp  tst_video_player.qml
tests/videos/: CMakeLists.txt  small.wmv
